--- a/src/main.css
+++ b/src/main.css
@@ -23,11 +23,35 @@ ul {
 .main__wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
-  min-width: 1440px;
+  min-height: 100vh;
+  min-width: 100vw;
   overflow: hidden;
 }
 .container {
   margin: 0 auto;
   width: 1440px;
+}
+
+/* iPad-mini */
+@media only screen and (max-width: 768px) {
+  .main__wrapper {
+   
+  }
+  .container {
+    margin: 0 auto;
+    width: 768px;
+    /* background-color: #2c3e50; */
+  }
+}
+
+/* iPhone */
+@media only screen and (max-width: 375px) {
+  .main__wrapper {
+   
+  }
+  .container {
+    margin: 0 auto;
+    width: 768px;
+    /* background-color: #2c3e50; */
+  }
 }
